# store-viewer

./: Cargo.toml  README.md  manifest.toml
assets/: app.css  app.js  index.html
src/: bindings.rs  lib.rs
wit/: world.wit
